--- a/quiz.html
+++ b/quiz.html
@@ -9,10 +9,24 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Outfit:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="assets/style/style.css" />
     <title>Quiz Page</title>
   </head>
   <body>
-    <h1>Quiz</h1>
+    <header>
+      <div class="logoContainer">
+        <img src="assets/img/epicode_logo.png" alt="logo" />
+      </div>
+      <div class="timerContainer">
+        <div class="timer">
+          <div class="timerText"></div>
+          <div class="label">SECONDS</div>
+          <p class="secondi">30</p>
+          <div class="label">REMAINING</div>
+        </div>
+      </div>
+    </header>
+    <main></main>
+    <script src="assets/script/script.js"></script>
   </body>
 </html>
