--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Outfit:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="assets/style/style.css" />
     <title>Welcome Page</title>
   </head>
   <body>
     <header>
       <div class="logoContainer">
-        <img src="./assets/epicode_logo.png" alt="logo" />
+        <img src="assets/img/epicode_logo.png" alt="logo" />
       </div>
     </header>
 
@@ -58,6 +58,6 @@
       <!-- Bottone di prova per il timer-->
       <!-- <button id="contoRovescia">Fai partire conto alla rovescia</button> -->
     </main>
-    <script src="script/script.js"></script>
+    <script src="assets/script/script.js"></script>
   </body>
 </html>
