Adding question and fixing style

--- a/quiz.html
+++ b/quiz.html
@@ -26,7 +26,29 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="questionContainer">
+        <div class="questionCard">
+          <div class="mainText">
+            <h1><span>Welcome to</span> your exam</h1>
+          </div>
+          <form class="answerContainer">
+            <div class="answerRow">
+              <input type="radio" name="answer" id="radio1" />
+              <label for="radio1">Risposta 1</label>
+              <input type="radio" name="answer" id="radio2" />
+              <label for="radio2">Risposta 2</label>
+            </div>
+            <div class="answerRow">
+              <input type="radio" name="answer" id="radio3" />
+              <label for="radio3">Risposta 3</label>
+              <input type="radio" name="answer" id="radio4" />
+              <label for="radio4">Risposta 4</label>
+            </div>
+          </form>
+        </div>
+      </section>
+    </main>
     <script src="assets/script/script.js"></script>
   </body>
 </html>
