inject answers success

--- a/quiz.html
+++ b/quiz.html
@@ -31,20 +31,20 @@
       <section class="questionContainer">
         <div class="questionCard">
           <div class="mainText">
-            <h1><span>Welcome to</span> your exam</h1>
+            <!-- <h1><span>Welcome to</span> your exam</h1> -->
           </div>
           <form class="answerContainer">
-            <div class="answerRow">
-              <input type="radio" name="answer" id="radio1" />
-              <label for="radio1">Risposta 1</label>
+            <div class="answerRow" id="row1">
+              <!-- <input type="radio" name="answer" id="radio1" />
+              <label for="radio1"></label>
               <input type="radio" name="answer" id="radio2" />
-              <label for="radio2">Risposta 2</label>
+              <label for="radio2"></label> -->
             </div>
-            <div class="answerRow">
-              <input type="radio" name="answer" id="radio3" />
-              <label for="radio3">Risposta 3</label>
+            <div class="answerRow" id="row2">
+              <!-- <input type="radio" name="answer" id="radio3" />
+              <label for="radio3"></label>
               <input type="radio" name="answer" id="radio4" />
-              <label for="radio4">Risposta 4</label>
+              <label for="radio4"></label> -->
             </div>
           </form>
         </div>
