Quiz logic finished

--- a/quiz.html
+++ b/quiz.html
@@ -49,7 +49,7 @@
           </form>
         </div>
         <section class="resultContainer">
-          <p>QUESTION 1<strong> / 10</strong></p>
+          <!-- <p>QUESTION 1<strong> / 10</strong></p> -->
         </section>
       </section>
     </main>
