--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
         </form>
       </section>
     </main>
-    <script src="assets/script/script.js"></script>
+    <!-- <script src="assets/script/script.js"></script> -->
   </body>
 </html>
